[workspace]
members = [
    "crates/config",
    "crates/pdag",
    "crates/cli",
    "crates/fault_tree",
    "crates/event_tree",
    "crates/connector",
    "crates/validator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["PRA Model Generator Contributors"]
repository = "https://github.com/Shram007/model-generator"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Graph
petgraph = "0.6"

# Randomness
rand = "0.8"
rand_chacha = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# XML
quick-xml = "0.38"
