[package]
name = "connector"
description = "Cross-tree shared event connector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
fault_tree = { path = "../fault_tree" }

[dev-dependencies]
config = { path = "../config" }
pdag = { path = "../pdag" }
