[package]
name = "fault_tree"
description = "Fault Tree model + Open-PSA MEF XML serialization"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
quick-xml.workspace = true
pdag = { path = "../pdag" }
event_tree = { path = "../event_tree" }

[dev-dependencies]
config = { path = "../config" }
