[package]
name = "validator"
description = "Model validators"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
petgraph.workspace = true
pdag = { path = "../pdag" }
fault_tree = { path = "../fault_tree" }
event_tree = { path = "../event_tree" }

[dev-dependencies]
config = { path = "../config" }
